Calculator functionality, overflow prevention dependent on width

--- a/Day-II-Calculator/calculator/src/App.css
+++ b/Day-II-Calculator/calculator/src/App.css
@@ -22,17 +22,7 @@ body {
     flex-wrap: wrap;
     width: 30%;
     background: gray;
-}
-.display {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 0 10px;
-    width: 100%;
-    height: 75px;
-    font-size: 5rem;
-    background: #222;
-    color: #eee;
+    border: 5px solid #222;
 }
 .action-btn {
     display: flex;
